testsuite/tests/typecheck/should_fail/ExplicitSpecificity3.stderr

ExplicitSpecificity3.hs:5:17: error: [GHC-58481]
    Parse error on input ‘}’. Expected one of '::', ','
